cloudformation_templates/asg-cfn.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: |
  Creates a VPC with three public subnets.
  Creates an ASG that launches EC2 instances
  Sets up an Update Policy that will do a rolling update when the LaunchTemplate
  changes.
Parameters:
  KeyPairParameter:
    Type: String
    Default: "A4L"
Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.199.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
  MyRT:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
  MyIGWRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref MyRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyIGW
  MySubnet1a:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: us-east-1a
      CidrBlock: 10.199.0.0/24
      VpcId: !Ref MyVPC
  MySubnet1b:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: us-east-1b
      CidrBlock: 10.199.2.0/24
      VpcId: !Ref MyVPC
  MySubnet1c:
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: us-east-1c
      CidrBlock: 10.199.3.0/24
      VpcId: !Ref MyVPC
  MySNRTAssociation1a:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRT
      SubnetId: !Ref MySubnet1a
  MySNRTAssociation1b:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRT
      SubnetId: !Ref MySubnet1b
  MySNRTAssociation1c:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRT
      SubnetId: !Ref MySubnet1c
  MyIGW:
    Type: AWS::EC2::InternetGateway
  MyIGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MyIGW
      VpcId: !Ref MyVPC
  MySG:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Allow ssh from all
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
  MyLaunchTemplate:
    Type: "AWS::EC2::LaunchTemplate"
    Properties:
      LaunchTemplateData:
        ImageId: ami-0cff7528ff583bf9a
        InstanceType: t2.micro
        KeyName: !Ref KeyPairParameter
        NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          Groups: 
            - !GetAtt "MySG.GroupId"
  MyASG:
    Type: "AWS::AutoScaling::AutoScalingGroup"
    Properties:
      VPCZoneIdentifier:
        - !Ref MySubnet1a
        - !Ref MySubnet1b
        - !Ref MySubnet1c
      DesiredCapacity: '3'
      MinSize: '3'
      MaxSize: '3'
      LaunchTemplate:
        LaunchTemplateId: !Ref MyLaunchTemplate
        Version: '1'
    UpdatePolicy:
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: 'true'
      AutoScalingRollingUpdate:
        MinInstancesInService: '1'
        MaxBatchSize: '2'
        WaitOnResourceSignals: 'false'
        PauseTime: PT10M
